seaqt/QtPdf/gen_qpdfdocumentrenderoptions.h

class QPdfDocumentRenderOptions;
class QRect;
class QSize;
typedef struct QPdfDocumentRenderOptions QPdfDocumentRenderOptions;
typedef struct QRect QRect;
typedef struct QSize QSize;
QPdfDocumentRenderOptions* QPdfDocumentRenderOptions_new();
QPdfDocumentRenderOptions* QPdfDocumentRenderOptions_new2(QPdfDocumentRenderOptions* param1);
int QPdfDocumentRenderOptions_rotation(const QPdfDocumentRenderOptions* self);
void QPdfDocumentRenderOptions_setRotation(QPdfDocumentRenderOptions* self, int r);
int QPdfDocumentRenderOptions_renderFlags(const QPdfDocumentRenderOptions* self);
void QPdfDocumentRenderOptions_setRenderFlags(QPdfDocumentRenderOptions* self, int r);
QRect* QPdfDocumentRenderOptions_scaledClipRect(const QPdfDocumentRenderOptions* self);
void QPdfDocumentRenderOptions_setScaledClipRect(QPdfDocumentRenderOptions* self, QRect* r);
QSize* QPdfDocumentRenderOptions_scaledSize(const QPdfDocumentRenderOptions* self);
void QPdfDocumentRenderOptions_setScaledSize(QPdfDocumentRenderOptions* self, QSize* s);
void QPdfDocumentRenderOptions_delete(QPdfDocumentRenderOptions* self);